--- a/hola-mundo.html
+++ b/hola-mundo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="-GkyI2Qr0H_MKC32Mfeni8DVirUPl1geKF7YiMP5CmQ" />
     <title>HOLA MUNDO</title>
 </head>
 <body>
